JVMCI test failed with assert(_jvmci._alternate_call_target == 0L) failed: must be

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b89
    • Verified

        # Internal Error (/opt/jprt/T/P1/192118.iggy/s/hotspot/src/share/vm/runtime/thread.hpp:1312), pid=16441, tid=112
        # assert(_jvmci._alternate_call_target == 0L) failed: must be
        #
        # JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20151009192118.iggy.8136725-b00)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-20151009192118.iggy.8136725-b00, compiled mode, jvmci, compressed oops, g1 gc, solaris-sparc)

              Assignee:
              Stefan Anzinger (Inactive)
              Reporter:
              Dean Long
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: