8139386: JVMCI test failed with assert(_jvmci._alternate_call_target == 0L) failed: must be

Reviewed-by: kvn